feat: add game detail endpoint
